--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "swiper": "^6.8.4",
     "web-vitals": "^1.1.2"
@@ -40,7 +41,7 @@
   },
   "devDependencies": {
     "react-redux": "^7.2.6",
-    "react-router-dom": "^5.3.0",
+    "react-transition-group": "^4.4.2",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0"
   }
